--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="container">
                         <div class="row ">
                             <div>
-                                <h2 style="text-align: center;color:white;padding-left: 450px;padding-top: 40px;padding-bottom: 30px;font-weight: bold;">Connect with me</h2>
+                                <h2 style="text-align: center;color:white;padding-top: 40px;padding-bottom: 30px;font-weight: bold;">Connect with me</h2>
                             </div>
                             <div class="col-md-12 pb-5 ">
                                 <a href="https://wa.me/919497304051?text=Hi Nithin" style="text-decoration: none;">
